--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:text="0"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:maxLength="12"
         android:id="@+id/screen"/>
 
     <GridLayout
@@ -38,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="%"
+        android:onClick="pressPercent"
         android:id="@+id/buttonPercent"
         android:singleLine="true"
         />
@@ -47,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="/"
+        android:onClick="pressDiv"
         android:id="@+id/buttonDivide"
         android:singleLine="true"
        />
@@ -57,6 +60,7 @@
         android:layout_height="wrap_content"
         android:text="&lt;"
         android:id="@+id/buttonBackspace"
+        android:onClick="pressBack"
         android:singleLine="true"
         />
 
@@ -95,6 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="x"
+        android:onClick="pressMult"
         android:id="@+id/buttonMult"
         android:singleLine="true"
         />
@@ -133,6 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="-"
+        android:onClick="pressMinus"
         android:id="@+id/buttonSub"
         android:singleLine="true"
        />
@@ -172,6 +178,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+"
+        android:onClick="pressPlus"
         android:id="@+id/buttonPlus"
         android:singleLine="true"
         />
@@ -202,6 +209,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="sr"
+        android:onClick="pressSqrt"
         android:id="@+id/buttonSquareRoot"
         android:singleLine="true"
        />
@@ -211,6 +219,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="="
+        android:onClick="pressEqual"
         android:id="@+id/buttonEqual"
         android:singleLine="true"
         />
