--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,22 @@
               tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/opScreen"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_weight="2"
+
+        android:paddingLeft="5dp"
+        android:gravity="bottom|right"
+        android:textStyle="bold"
+        android:textSize="36sp"/>
+
+    <TextView
         android:id="@+id/screen"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_weight="3"
-        android:maxLength="12"
+        android:layout_height="50dp"
+        android:layout_weight="1"
+        android:maxLines="1"
         android:text="0"
         android:gravity="bottom|right"
         android:textStyle="bold"
